Small spacing fix.

--- a/public/css/works.css
+++ b/public/css/works.css
@@ -41,7 +41,7 @@ ul#usr-work-list {
   display: flex;
   flex-direction: column;
   margin: 8px;
-  padding: 0;
+  padding: 8px;
   background-color: #dce2ba;
   list-style: none;
 }
@@ -56,6 +56,7 @@ li.work-brief {
   position: relative;
   left: 0;
   display: block;
+  margin-bottom: 8px;
   padding: 8px;
   background-color: #c0d6a7;
   color: inherit;
